@@ -1,7 +1,7 @@
 dnl Process this file with 'autoconf' to produce a 'configure' script
-dnl $Id: configure.in,v 12.4 2000/11/01 22:13:22 tom Exp $
-AC_REVISION($Revision: 12.4 $)
-AC_PREREQ(2.13.20000819)
+dnl $Id: configure.in,v 12.5 2002/12/21 19:25:06 tom Exp $
+AC_REVISION($Revision: 12.5 $)
+AC_PREREQ(2.13.20020210)
 AC_INIT(src/ded.hlp)
 CF_CHECK_CACHE
 
@@ -21,8 +21,6 @@ CF_LIB_PREFIX
 CF_FIND_TDLIB
 CF_MAKE_AR_RULES
 CF_MAKE_INCLUDE
-
-###	use option -with-warnings to turn on all gcc warnings
 
 ### Compiler characteristics
 
